# hersenneuk

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  test.yml
bf-samples/: inf_loop.bf
src/: code_cleanup.rs  interpreter.rs  lib.rs  main.rs  syntax_checking.rs
test_assets/: hello_mismatch.bf  hello_with_comments.bf
tests/: main.rs
