[package]
name = "hersenneuk"
version = "0.1.0"
authors = ["Elhanan Flesch"]
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["brainfuck", "esoteric-languages", "esolang", "bf"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"regex" = "1.6.0"
