[package]
name = "hersenneuk"
version = "0.1.0"
authors = ["Elhanan Flesch"]
description = "A Brainfuck interpreter (and a library) written in Rust."
repository = "https://github.com/synthetic-borealis/hersenneuk"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["brainfuck", "esoteric-languages", "esolang", "bf"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"regex" = "1.6.0"
