[package]
name = "hersenneuk"
version = "0.2.2"
authors = ["Elhanan Flesch"]
description = "A Brainfuck interpreter written in Rust."
repository = "https://github.com/synthetic-borealis/hersenneuk"
license = "MIT"
edition = "2021"
readme = "README.md"
keywords = ["brainfuck", "esoteric-languages", "esolang", "bf"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
"regex" = "1.6.0"
